# GoFreight_Homework

./: .env.copy  .gitignore  .pre-commit-config.yaml  Question.md  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: generate_dataset.py  run_eval.py
eval/datasets/: error_cases.json  generated_cases.json  generated_cases_verified.json
eval/reports/: baseline_report.md  generated_eval_report.json  generated_eval_report_groq_verified.json  generated_eval_report_verified.json  tmp_gemini_recheck.json  tmp_openai_recheck.json
src/dc_nl_cli/: __init__.py  cli.py  config.py  errors.py  eval_runner.py  judge.py  pipeline.py  resolution.py  time_analysis.py
src/dc_nl_cli/datacommons/: __init__.py  client.py  query_builder.py
src/dc_nl_cli/llm/: __init__.py  base.py  factory.py  gemini.py  ollama.py  openai_compatible.py  wrappers.py
src/dc_nl_cli/parser/: __init__.py  prompt.py  schema.py  service.py
src/dc_nl_cli/resolvers/: __init__.py  place_resolver.py  stat_var_resolver.py  time_resolver.py
tests/: test_aggregation.py  test_cli_baseline.py  test_eval_runner.py  test_gemini_client.py  test_generate_dataset.py  test_judge.py  test_llm_factory.py  test_llm_wrappers.py  test_parser_schema.py  test_parser_service.py  test_place_resolver.py  test_query_builder.py  test_stat_var_resolver.py
